refactor: clean up search pipeline and controller layer
- ProfessionalController now builds ProfessionalSearchCriteria directly;
  removes 12-param passthrough in ProfessionalService.searchProfessionals()
- Remove duplicate contact endpoint from ProfessionalController
  (kept in ContactController at /api/contact/professionals/{id})
- ContactService: fix @Service annotation (was full class path), use
  ResourceNotFoundException instead of raw RuntimeException
- ProfessionalSearchCriteria: remove dead @Deprecated hasSkillsFilter()
  and misleadingly-named hasLocationOrAvailabilityFilter()
- ProfessionalMapper: fix inconsistency — updateServicesFromDTO and
  updateSocialLinksFromDTO now clear on empty list, same as other update methods
- CorsConfig: replace Arrays.asList with List.of for immutable collections

feat: service areas — new table, entity, search integration, NL query parsing
refactor: unified repository SQL (2 queries replace 6)